--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,8 @@
 VITE_ACCOUNT_MANAGEMENT_URL=https://portal.observe.dev.eks.gainetics.io/microApp/accountManagement/
 # 星云（可观测）子应用
 VITE_STARVIEW_URL=https://portal.observe.dev.eks.gainetics.io/microAppStarview/
+# 运维自动化平台
+VITE_AUTOMATION_URL=https://portal.observe.dev.eks.gainetics.io/microAppAutomation/
 # 身份
 VITE_APP_BASE_API_AUTH=https://gateway.observe.dev.eks.gainetics.io/
 # 产品
