--- a/.env.development
+++ b/.env.development
@@ -4,9 +4,12 @@ VITE_PORT=8080
 VITE_ACCOUNT_MANAGEMENT_URL=http://localhost:8081
 # 星云（可观测）子应用
 VITE_STARVIEW_URL=http://localhost:8082
+# 运维自动化平台
+VITE_AUTOMATION_URL=http://localhost:8083
 # 身份
 VITE_APP_BASE_API_AUTH=/auth-proxy
 # 产品
 VITE_APP_BASE_API_PRODUCTS=/products
 # AI智能体
 VITE_APP_BASE_API_AIAGENT=''
+
