--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "node scripts/lint.cjs",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.2.0",
@@ -17,6 +19,8 @@
     "@formily/reactive": "^2.3.7",
     "@formily/reactive-vue": "^2.3.7",
     "@formily/vue": "^2.3.7",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "@vue/shared": "^3.5.21",
     "@vueuse/core": "^13.9.0",
@@ -25,13 +29,23 @@
     "dart-sass": "^1.25.0",
     "dayjs": "^1.11.18",
     "element-plus": "^2.11.3",
-    "jwt-decode": "^4.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.2",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^2.1.4",
+    "eslint-plugin-prettier": "^4.2.5",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^9.33.0",
+    "husky": "^7.0.4",
+    "json-bigint": "^1.0.0",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "prettier": "^2.8.8",
     "prismjs": "^1.30.0",
     "qiankun": "^2.10.16",
     "qs": "^6.14.0",
@@ -53,5 +67,11 @@
     "typescript": "~5.8.3",
     "vite": "^7.1.6",
     "vue-tsc": "^3.0.7"
+  },
+  "lint-staged": {
+    "*.{vue,js,ts,jsx,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
